=== gvfs 0.99.8 ===

2008-09-15  Hans Petter Jansson <hpj@novell.com>

	* NEWS:
	* configure.ac: Prepare for 0.99.8 release.

2008-09-15  Tomas Bzatek  <tbzatek@redhat.com>

	* client/smburi.c:
	Encode username and domain into the URI

2008-09-15  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendsmb.c:
	Revert commit #1772.
	Set the information on the mount spec from the original URI

2008-09-15  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonfile.c:
	Don't leak the GSimpleAsyncResult in find_enclosing_mount_async.
	Patch by Matthias Clasen <mclasen@redhat.com) (#552295)

2008-09-15  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonfileenumerator.c:
	Add proper implementation of async file enumeration.
	This avoids the problem with the default thread based ones
	that could cause callbacks in the non-mainloop thread. (#551337)

2008-09-15  Christian Kellner  <gicmo@gnome.org>

	* configure.ac: Fix gnome-keyring configure switch
	Patch by Rémi Cardona  <remi@gentoo.org> (#552126)

=== gvfs 0.99.7.1 ===

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.ac: 0.99.7.1

2008-09-02  David Zeuthen  <davidz@redhat.com>

	* monitor/hal/ghaldrive.c: (g_hal_drive_eject_do):
	* monitor/hal/ghalmount.c: (unmount_cb), (unmount_do),
	(eject_wrapper_callback), (g_hal_mount_eject):
	* monitor/proxy/gproxymount.c: (eject_wrapper_callback),
	(g_proxy_mount_eject):
	* monitor/proxy/gproxyvolume.c: (eject_wrapper_callback):
	Remember to refcount objects (#546971).

2008-09-02  David Zeuthen  <davidz@redhat.com>

	* monitor/hal/ghalvolume.c (format_size_for_display): Add docs
	explaining why powers of 10 are used.

2008-09-02  David Zeuthen  <davidz@redhat.com>

	* monitor/hal/ghalvolume.c (do_update_from_hal): Revert patch from
	bug 550100 - we really don't want to show "61.7MB Volume" instead
	of "64M Volume".

2008-09-01  Hans Petter Jansson  <hpj@novell.com>
